# memento

./: .gitignore  LICENSE  README.md  mypy.ini  pyproject.toml  requirements.txt
.github/workflows/: pylint.yml
demo/: demo_parameter_tuning.ipynb  demo_with_memento.ipynb  demo_with_memento.py  demo_without_memento.ipynb  with_memento_with_error.py  with_memento_without_error.py  without_memento.py
docs/: conf.py  index.rst  memento.rst  modules.rst
memento/: __init__.py  caching.py  configurations.py  exceptions.py  memento.py  notifications.py  parallel.py  task_interface.py
tests/: test_caching.py  test_configurations.py  test_memento.py  test_notifications.py  test_parallel.py  test_task_interface.py
