# pyproject.toml

[build-system]
requires = ["setuptools>=67.4.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "memento-ml"
version = "1.0.1"
description = "A Python library for running computationally expensive experiments"
readme = "README.md"
authors = [
    { name = "Zac Pullar-Strecker", email = "zacmps@gmail.com" },
    { name = "Joshua de Wet"},
    { name = "Liam Scott-Russell", email = "liam.scott.russell@gmail.com" },
    { name = "Feras Albaroudi"},
    { name = "James Lamberton", email = "j.w.lamberton@outlook.com" },
    { name = "Nipun Jasti", email = "nipunjasti@gmail.com" },
    { name = "Luke Chang", email = "luke.x.chang@gmail.com" },
    { name = "Jörg Simon Wicker", email = "j.wicker@auckland.ac.nz" },
]
maintainers = [
    { name = "Luke Chang", email = "luke.x.chang@gmail.com" },
]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",

]
keywords = ["experiment", "parallel", "sklearn", "machine learning"]
requires-python = ">=3.7, <3.10"
dependencies = [
    "cloudpickle >= 1.6.0, < 2",
    "networkx >= 2.5.1, < 3",
    "pandas >= 1.5.3, < 2",
    "pandas-stubs",
]

[project.optional-dependencies]
dev = [
    "black", 
    "pylint",
    "bumpver", 
    "isort", 
    "pip-tools", 
    "pytest",
    "Sphinx",
    "mypy",
    "aiosmtpd",
    "scikit-learn",
]

[project.urls]
Homepage = "https://github.com/wickerlab/memento"

[tool.setuptools]
packages = ["memento"]
py-modules = ["memento"]

[tool.pylint.miscellaneous]
# Allow TODO notes
notes = "FIXME,XXX"
disable = ["too-many-instance-attributes", "too-few-public-methods"]

[tool.pytest.ini_options]
markers = [
    "slow"
]
log_cli=true
log_level="NOTSET"

[tool.bumpver]
current_version = "1.0.1"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"',
]
"memento/__init__.py" = ["{version}"]
